--- a/Fotoanalyse/Fotoanalyse/interface.kv
+++ b/Fotoanalyse/Fotoanalyse/interface.kv
@@ -1,9 +1,3 @@
-ScreenManagement:
-
-    StartScreen:
-	ConfigurationScreen:
-    WaitingScreen:
-	ResultScreen:
 
 <StartScreen>:
 
@@ -22,7 +16,6 @@ ScreenManagement:
 		Button:
 			background_color: 0.5, 0.5, 0.5, 1
 			on_press: root.StartTakingPictures()
-			
 			text: 'Start taking pictures'
 			font_size: 25
 
@@ -45,14 +38,16 @@ ScreenManagement:
 			font_size: 25
 
 		Button:
-			text: 'dropdown'
+			text: 'Save bilateral image'
 			on_release: root.drop_down.open(self)
 
 		Button:
-			text: 'next option'
+			text: 'Save detected plastic image'
+			on_release: root.drop_down.open(self)
 
 		TextInput:
 			text:""
+			
 			input_filter: 'int'
 		    multiline: False
 		    color:1,0,0,1
