--- a/Fotoanalyse/Fotoanalyse/interface.kv
+++ b/Fotoanalyse/Fotoanalyse/interface.kv
@@ -13,14 +13,10 @@
 			
 <CalculationScreen>:
 	name: 'Calculating'
-	on_enter: root.CaculateResults()
+	on_enter: root.CalculateResults()
 
-	GridLayout:
-		cols: 1
-        orientation: 'horizontal'
-
-		Label:
-			text: 'calculating...'
+	Label:
+		text: 'calculating...'
 
 <ResultScreen>:
 
