added framework for adding/removing colors

--- a/Fotoanalyse/Fotoanalyse/interface.kv
+++ b/Fotoanalyse/Fotoanalyse/interface.kv
@@ -1,6 +1,4 @@
-# Tom Landzaat student @ EE THUAS
-# student ID : 14073595
-# date : 11-12-2017
+
 
 <StartScreen>:
 
@@ -35,6 +33,10 @@
 <ConfigurationScreenLayout>:
 
 	name: 'ConfigurationLayout'
+
+<Color>:
+
+	name: 'color'
 
 
 		
