--- a/Fotoanalyse/Fotoanalyse/interface.kv
+++ b/Fotoanalyse/Fotoanalyse/interface.kv
@@ -28,15 +28,15 @@
 
 <ConfigurationScreen>:
 
-	name : 'Configuration'
-
 <ConfigurationScreenLayout>:
 
-	name: 'ConfigurationLayout'
+<ColorScreenLayout>:
 
-<Color>:
+<SettingsColorScreen>:
+  
+<ColorWidget>:
 
-	name: 'color'
+
 
 
 		
