--- a/Fotoanalyse/Fotoanalyse/interface.kv
+++ b/Fotoanalyse/Fotoanalyse/interface.kv
@@ -1,30 +1,16 @@
-
-
 <StartScreen>:
-
-	name: 'Start'
 
 <TakingPicturesScreen>:
 
-	name: 'TakingPictures'
-	on_enter: root.StartTakingPictures()
-			
-<CalculationScreen>:
-	name: 'Calculating'
-	on_enter: root.CalculateResults()
+    on_enter: root.TakingPicturesScreenLayoutInstance.StartTakingPictures()
 
-	Label:
-		text: 'Calculating...'
+<CalculationScreen>:
+
+    on_enter: root.CalculateResults()
 
 <ResultScreen>:
 
-	name: 'Results'	
-
 <ShowPercentages>:
-
-	name: 'ShowPercentages'
-	orientation: 'vertical'
-	spacing: 1
 
 <ConfigurationScreen>:
 
