started with visualization. Works, but not with interface

--- a/Fotoanalyse/Fotoanalyse/interface.kv
+++ b/Fotoanalyse/Fotoanalyse/interface.kv
@@ -22,6 +22,28 @@
   
 <ColorWidget>:
 
+<smallcircle>:
+    FloatLayout:
+        canvas:
+            Color:
+                rgb: 1, 1, 1
+            Ellipse:
+                pos: 465, 300
+                size: 250, 250
+                source: 'C:/Users/tom_l/hsv.png'
+
+<bigcircle>:
+    FloatLayout:
+        canvas:
+            Color:
+                rgb: 1, 1, 1
+            Ellipse:
+                pos: 440, 275
+                size: 300, 300
+                source: 'C:/Users/tom_l/hsv.png'
+                angle_start: root.LeftAngle
+                angle_end: root.RightAngle
+
 
 
 
