minor camera improvements

--- a/Fotoanalyse/Fotoanalyse/interface.kv
+++ b/Fotoanalyse/Fotoanalyse/interface.kv
@@ -1,4 +1,7 @@
-<StartScreen>:
+# Tom Landzaat student @ EE THUAS
+# student ID : 14073595
+# company: Polytential B.V.
+# date : 12-1-2018
 
 <TakingPicturesScreen>:
 
